--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,15 @@ $cr-white: #FFFFFF;
 $nat-geo-grey: #373737;
 $nat-geo-salmon: #eb5f3c;
 $gold: #FFD700;
+$home-background-1: #00A830;
+
+// fonts
+$title-font: 'Comfortaa', cursive;
+$home-font: 'Poppins', sans-serif;
+
+// home banner customization
+$home-banner-1-color: $cr-white;
+
 
 // page setup
 body {
@@ -17,8 +26,10 @@ body {
 // TnT main top banner
 .tnt-banner {
     width: 100%;
-    height: 260px;
+    height: 350px;
     background-color: $nat-geo-grey;
+
+    font-family: $title-font;
 
     display: flex;
     flex-direction: column;
@@ -26,8 +37,8 @@ body {
     align-items: center;
 
     .tnt-horizontal-nav {
-        width: 65%;
-        height: 40px;
+        width: 75%;
+        height: 50px;
 
         display: flex;
         flex-direction: row;
@@ -38,10 +49,11 @@ body {
     .tnt-navlink {
         $tnt-navlink-color: $gold;
 
-        width: 110px;
+        width: 150px;
         height: 30px;
 
-        font-size: 16px;
+        text-decoration: none;
+        font-size: 18px;
         color: $tnt-navlink-color;
 
         border-top-style: solid;
@@ -66,12 +78,12 @@ body {
 
 .tnt-title {
     width: 1000px;
-    height: 150px;
-    margin: 10px;
+    height: 160px;
+    margin: 50px;
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 
     .title-subtitle {
@@ -83,6 +95,8 @@ body {
         align-items: flex-end;
 
         .title-text {
+            margin: 8px;
+
             font-size: 70px;
             color: $cr-white;
     
@@ -105,5 +119,47 @@ body {
 
     .tnt-logo {
         margin: 8px;
+    }
+}
+
+.home-page {
+
+    .home-banner {
+        width: 100%;
+        height: 430px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+
+        .home-banner-message {
+            width: 40%;
+            height: 50%;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: flex-start;
+            
+            .home-banner-title {
+                font-family: $home-font;
+                font-size: 35px;
+                font-weight: bold;
+            }
+
+            .home-banner-text {
+                font-family: $home-font;
+                font-size: 25px;
+            }
+        }
+    }
+
+    #home-banner-1 {
+        background-color: $home-banner-1-color;
+    }
+
+    #home-banner-2 {
+        background-color: $cr-red;
     }
 }
