--- a/src/style.scss
+++ b/src/style.scss
@@ -163,3 +163,73 @@ body {
         background-color: $cr-red;
     }
 }
+
+.tnt-footer {
+    width: 100%;
+    height: 220px;
+    
+    background-image: url('./supportData/underwater.jpg');
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+
+    .tnt-footer-content {
+        $footer-content-color: $cr-blue;
+        font-family: $home-font;
+
+        width: 87%;
+        height: 70%;
+
+        border-bottom-style: solid;
+        border-color: $footer-content-color;
+        border-width: 2px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        .content-left {
+            width: 25%;
+            height: 100%;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+
+            .content-left-item {
+                margin: 4px;
+                font-size: 18px;
+                color: $footer-content-color;
+            }
+
+            #content-left-special {
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+
+        .content-right {
+            width: 23%;
+            height: 90%;
+
+            font-size: 25px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+
+            .content-right-navlink {
+                text-decoration: none;
+                color: $footer-content-color;
+
+                border-bottom-style: solid;
+            }
+        }
+    }
+}
