--- a/src/style.scss
+++ b/src/style.scss
@@ -8,10 +8,12 @@ $nat-geo-grey: #373737;
 $nat-geo-salmon: #eb5f3c;
 $gold: #FFD700;
 $home-background-1: #00A830;
+$vision-text-background: #000000;
 
 // fonts
 $title-font: 'Comfortaa', cursive;
 $home-font: 'Poppins', sans-serif;
+$vision-font: $home-font;
 
 // home banner customization
 $home-banner-1-color: $cr-white;
@@ -26,7 +28,7 @@ body {
 // TnT main top banner
 .tnt-banner {
     width: 100%;
-    height: 350px;
+    height: 250px;
     background-color: $nat-geo-grey;
 
     font-family: $title-font;
@@ -231,5 +233,67 @@ body {
                 border-bottom-style: solid;
             }
         }
+    }
+}
+
+.vision-header {
+    width: 100%;
+    height: 400px;
+
+    background-image: url('./supportData/sunset.jpg');
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .vision-header-text {
+        width: 86%;
+        height: 100%;
+        
+        font-size: 70px;
+        color: $cr-white;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+    }
+}
+
+.tnt-vision-banner {
+    width: 100%;
+    height: 370px;
+
+    background: $vision-text-background;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .tnt-vision-banner-interior {
+        width: 86%;
+        height: 70%;
+        font-family: $vision-font;
+
+        border-bottom-style: solid;
+        border-color: $cr-white;
+        border-width: 2px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        #tnt-vision-banner-header {
+            font-size: 22px;
+            font-weight: bold;
+            color: $cr-white;
+        }
+
+        #tnt-vision-banner-text {
+            font-size: 18px;
+            color: $cr-white;
+        }
+        
     }
 }
