--- a/src/style.scss
+++ b/src/style.scss
@@ -33,38 +33,38 @@ body {
 // TnT main top banner
 .tnt-banner {
     width: 100%;
-    height: 250px;
-    background-color: $nat-geo-grey;
+    height: 60px;
+    // background-color: $nat-geo-grey;
+    background-color: $cr-blue;
 
     font-family: $title-font;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
 
     .tnt-horizontal-nav {
-        width: 75%;
-        height: 50px;
+        width: 50%;
+        height: 100%;
+        margin: 50px;
 
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: flex-end;
         align-items: center;
     }
 
     .tnt-navlink {
         $tnt-navlink-color: $gold;
 
-        width: 150px;
-        height: 30px;
+        width: 85px;
+        height: 55%;
+        margin: 5px;
 
         text-decoration: none;
-        font-size: 18px;
+        font-size: 14px;
         color: $tnt-navlink-color;
-
-        border-top-style: solid;
-        border-color: $tnt-navlink-color;
 
         transition: .2s;
 
@@ -80,52 +80,30 @@ body {
         color: $tnt-navlink-transition-color;
         border-color: $tnt-navlink-transition-color;
     }
+
+    .active {
+        border-bottom-style: solid;
+        border-color: $cr-white;
+        border-width: 1px;
+    }
 }
 
 
 .tnt-title {
-    width: 1000px;
-    height: 160px;
-    margin: 50px;
+    width: 660px;
+    height: 100%;
+    
+    font-size: 40px;
+    font-weight: bold;
+    color: $cr-white;
 
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 
-    .title-subtitle {
-        width: 100%;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-end;
-
-        .title-text {
-            margin: 8px;
-
-            font-size: 70px;
-            color: $cr-white;
-    
-            border-bottom-style: solid;
-            border-color: $gold;
-        }
-
-        .tnt-subtitle {
-            width: 100%;
-    
-            font-size: 30px;
-            color: $cr-white;
-    
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            align-items: center;
-        }
-    }
-
-    .tnt-logo {
-        margin: 8px;
+    .title-text {
+        margin: 10px;
     }
 }
 
@@ -167,6 +145,7 @@ body {
     }
 
     #home-banner-2 {
+        color: $cr-white;
         background-color: $cr-red;
     }
 }
@@ -335,6 +314,57 @@ body {
         .news-text {
             font-size: 18px;
             font-family: $ibm-font;
+        }
+    }
+}
+
+.tnt-donate {
+    width: 100%;
+    height: 400px;
+    margin: 20px;
+
+    .donate-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+
+        .donate-blurb {
+            width: 35%;
+            height: 70%;
+            margin-top: 120px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+
+            .donate-blurb-title {
+                font-size: 40px;
+                font-weight: bold;
+                font-family: $ibm-font;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .donate-blurb-text {
+                width: 90%;
+
+                font-size: 16px;
+                font-family: $home-font;
+            }
+
+            .donate-blurb-subtext {
+                width: 90%;
+                margin-top: 30px;
+
+                font-size: 16px;
+                font-family: $home-font;
+                font-weight: bold;
+            }
         }
     }
 }
